# NeuPIMcopy

./: .clangd  CMakeLists.txt  KVallocation_sim.py  brun.sh  build.sh  channel_row_allocator_demo.py  conanfile.txt  graph.dot  learning_roadmap.md
configs/: systolic_ws_128x128_dev.json
configs/memory_configs/: neupims.json
configs/model_configs/: gpt3-7B.json
src/: BatchedRequest.cc  CMakeLists.bak  CMakeLists.txt  Common.cc  Common.h  Core.cc  Core.h  Dram.cc  Mapping.h  Model.cc  ModelProgram.cc  README.md  SimulationConfig.h  Simulator.cc  Simulator.h  StageProgram.bak  StageProgram.h  debug_graph.cc  main.cc
src/allocator/: ActivationAllocator.cc  AddressAllocator.h  KVCacheAllocator.cc  WeightAllocator.cc
src/helper/: CommandLineParser.h
src/operations/: LayerNorm.cc  NeuPIMSAttend.cc  NeuPIMSAttend.h  NeuPIMSLogitSoftmax.cc  Readme.md  SplitDecoding.cc
src/scheduler/: Scheduler.cc
src/tensor/: BTensor.h  NPUTensor.cc  NPUTensor.h  NPUTensor2D.cc  PIMTensor.cc  PIMTensor.h
trace-generator/: get_distributions.py
项目阅读/: PIM和NPU的数据布局.md  张量切分.md  项目更新.md
